# cppforth

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
platform/: main.cpp
tests/: eforth
